Modify index.html to include kappa.html link

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1>Temp Recipes</h1>
         <a href="recipes/thoran.html">Thoran</a>
+        <a href="recipes/kappa.html">Kappa</a>
     </body>
 </html>
