Add another modified kappa.html to resolve broken image

--- a/recipes/kappa.html
+++ b/recipes/kappa.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Kappa</h1>
-        <img src="https://track.foodgawker.com/3590934/https://meemiskitchen.com/2020/04/01/kappa-ularthiyathu-kerala-style-tapioca-stir-fry/" alt="kappa picture">
+        <img src="https://www.archanaskitchen.com/images/archanaskitchen/1-Author/sibyl_sunitha/Kerala_Style_Kappa_Ulathiyatu_Recipe_Tapioca_Stir_Fry_Recipe.jpg" alt="kappa picture">
         <h2>Recipe</h2>
         <p>Kappa goes with fish curry</p>
         <p>This is similar to dominican yuca.</p>
